--- a/app/src/main/res/layout/layout_settings_item0.xml
+++ b/app/src/main/res/layout/layout_settings_item0.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingEnd="@dimen/y20"
     android:paddingStart="@dimen/y20">
 
@@ -23,26 +23,25 @@
     <TextView
         android:id="@+id/tv_settings_item_title"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/y6"
+        android:layout_marginTop="@dimen/y19"
         android:gravity="center|start"
         android:text="@string/EQUIPMENT_INFO"
         android:textColor="@color/color_black"
         android:textSize="@dimen/sp16"
-        app:layout_constraintBottom_toTopOf="@+id/tv_settings_item_sub_title"
         app:layout_constraintEnd_toStartOf="@+id/option_container"
         app:layout_constraintStart_toEndOf="@+id/imgv_item_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_settings_item_sub_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y3"
+        android:layout_marginTop="@dimen/y6"
         android:textColor="@color/color_8C8C8C"
         android:textSize="@dimen/sp13"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/option_container"
         app:layout_constraintStart_toStartOf="@+id/tv_settings_item_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_settings_item_title"
@@ -87,6 +86,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <View
+        android:id="@+id/bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/y18"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/tv_settings_item_sub_title" />
 
     <View
         android:id="@+id/v_divider"
