--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingEnd="@dimen/y20"
     android:paddingStart="@dimen/y20">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_settings_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginBottom="@dimen/y22"
+        android:layout_marginTop="@dimen/y15"
+        android:drawablePadding="@dimen/x10"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:text="设备信息"
+        android:textColor="@color/color_black"
+        android:textSize="@dimen/sp16"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_settings_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:drawablePadding="@dimen/x10"
-            android:gravity="center"
-            android:text="设备信息"
-            android:textColor="@color/color_black"
-            android:textSize="@dimen/sp16" />
-
-        <View
-            android:id="@+id/v_hint"
-            android:layout_width="@dimen/x7"
-            android:layout_height="@dimen/y7"
-            android:layout_marginStart="@dimen/x8"
-            android:background="@drawable/hardware_update_point"
-            android:visibility="invisible" />
-    </LinearLayout>
+    <View
+        android:id="@+id/v_hint"
+        android:layout_width="@dimen/x7"
+        android:layout_height="@dimen/y7"
+        android:layout_marginStart="@dimen/x8"
+        android:background="@drawable/hardware_update_point"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_settings_item_title"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.cylan.jiafeigou.widget.SafeSwitchButton
         android:id="@+id/btn_item_switch"
         style="@style/SwitchButtonStyleMD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|center_vertical"
         android:checked="true"
-        android:gravity="end" />
+        android:gravity="end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <View
         android:id="@+id/v_divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y1"
         android:layout_gravity="bottom"
-        android:background="@color/color_e8e8e8" />
-</FrameLayout>
+        android:background="@color/color_e8e8e8"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</android.support.constraint.ConstraintLayout>
