CircleImageView增加右上角红点功能

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -237,6 +237,8 @@
         <attr name="civ_border_color" format="color" />
         <attr name="civ_border_overlay" format="boolean" />
         <attr name="civ_fill_color" format="color" />
+        <attr name="civ_hint_color" format="color|reference" />
+        <attr name="civ_hint_radius" format="dimension|reference" />
     </declare-styleable>
 
     <!--软键盘-->
